--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 <body>
     <div class="container">
         <h3>Log In</h3>
-        <form action="">
-            <input type="email" name="" id="" placeholder="Email">
-            <input type="password" name="" id="" placeholder="Password">
+        <form action="" name="loginform" onsubmit="login(event)">
+            <input type="email" name="" id="loginEmail" placeholder="Email">
+            <input type="password" name="" id="loginPassword" placeholder="Password">
+            <input type="submit">
         </form>
         <p>New member? <a href="/signup.html">Sign up</a></p>
-        <button type="submit">
-            <a href="index.html">Log in</a>
-        </button>
     </div>
 
     <script src="main.js"></script>
